Ejercicio-Kubernetes/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-avatares
  namespace: proyecto-avatares
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-avatares
  template:
    metadata:
      labels:
        app: backend-avatares
    spec:
      containers:
      - name: backend-avatares
        image: lsmcba/backend-avatares:1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: backend-avatares
  namespace: proyecto-avatares
spec:
  selector:
    app: backend-avatares
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
