Ejercicio-Kubernetes/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: proyecto-avatares
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: lsmcba/web:1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5173
---

apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: proyecto-avatares
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
  type: NodePort
